--- a/wordpress.yml
+++ b/wordpress.yml
@@ -1,7 +1,7 @@
 ---
   - name: Create an EC2 Instance
-    hosts: 127.0.0.1
-    connection: 127.0.0.1
+    hosts: local
+    connection: local
     gather_facts: False
     tags: deployment
     
