Finish ansible script

--- a/ansible/roles/apache/tasks/main.yml
+++ b/ansible/roles/apache/tasks/main.yml
@@ -1,12 +1,11 @@
 ---
 - name: Ensure apache packages are installed
   apt:
-    name: {{item}}
+    name: "{{ item }}"
     state: present
   with_items:
     - apache2
-    - libapache2-mod-php7.2
-
+    
 - name: Start apache
   service:
     name: apache2
