--- a/ansible/roles/mysql/tasks/main.yml
+++ b/ansible/roles/mysql/tasks/main.yml
@@ -1,11 +1,21 @@
 ---
+
+- name: Setup mysql pass
+  debconf:
+    name: mysql-server
+    question: "{{ item }}"
+    value: "{{ wordpress_db_root_password }}"
+    vtype: password
+  with_items:
+    - root_password
+    - root_password_again
+
 - name: Ensure mysql packages are installed
   apt:
-    name: {{item}}
+    name: "{{ item }}"
     state: present
   with_items:
     - mysql-server
-    - php7.2-mysql
 
 - name: Start mysql
   service:
