--- a/ansible/roles/wordpress/tasks/main.yml
+++ b/ansible/roles/wordpress/tasks/main.yml
@@ -2,24 +2,37 @@
 - name: Download WordPress
   get_url:
     url: https://wordpress.org/latest.tar.gz
-    dest: /tmp
+    dest: /tmp/latest.tar.gz
 
 - name: Extract archive
   unarchive:
     src: /tmp/latest.tar.gz
-    dest:  /var/www/html
+    dest: /var/www/html
+    extra_opts: [--strip-components=1]
+
+- name: install python mysql bindings
+  apt:
+    name: python-mysqldb
+    state: present
+
+- name: Docker hack (Dont use systemd)
+  command: "service {{ item }} start"
+  ignore_errors: yes
+  with_items:
+    - mysql
+    - apache2a
 
 - name: Create WordPress database
   mysql_db:
-    name: {{ wp_db_name }}
+    name: "{{ wordpress_db_name }}"
     state: present
 
 - name: Create WordPress database user
   mysql_user:
-    name: {{ wp_db_user }}
-    password: {{ wp_db_password }}
-    priv: {{ wp_db_name }}.*:ALL
-    host: 'localhost'
+    name: "{{ wordpress_db_user }}"
+    password: "{{ wordpress_db_user_password }}"
+    priv: "{{ wordpress_db_name }}.*:ALL"
+    host: "{{ wordpress_db_host}}"
     state: present
 
 - name: Copy WordPress config file
@@ -27,10 +40,22 @@
     src: wp-config.php
     dest: /var/www/html
 
-- name: Restart apache and mysql
+- name: Copy htaccess config file
+  template:
+    src: .htaccess
+    dest: /var/www/html
+
+- name: Enable htaccess
+  replace:
+    dest: /etc/apache2/apache2.conf
+    regexp: 'AllowOverride None'
+    replace: 'AllowOverride All'
+    backup: yes
+
+- name: Restart Apache and MySql
   service:
-    name: item
+    name: "{{ item }}"
     state: restarted
   with_items:
-    - my_sql
+    - mysql
     - apache2
