Add travis ci file

--- a/assignment2/Dockerfile
+++ b/assignment2/Dockerfile
@@ -6,4 +6,4 @@ COPY . .
 
 RUN apt-get update &&  apt-get install -y software-properties-common && apt-add-repository ppa:ansible/ansible && apt-get update && apt-get install -y git ansible && ansible --version
 
-CMD ansible-playbook -i hosts --connection=local ./ansible/site.yml  & /bin/bash
+ENTRYPOINT ["/sbin/init"]
