--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ jobs:
    - stage: prepare
      script: container_id=$(mktemp)
    - name: "Download containers"
-     script: 'sudo docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro ass2:ansible > "${container_id}"'
+     script: 'sudo docker run --detach --privileged ass2:ansible > "${container_id}"'
    - stage: linting
      name: "Check ansible playbook"
      script: 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -i hosts --connection=local ./ansible/site.yml --syntax-check'
